--- a/teste.html
+++ b/teste.html
@@ -236,7 +236,7 @@
     <main>
         <div class="especial">
             <div class="banner1">
-                <img src="../layout_site/imagens/anuncie.png" width="330" height="500">
+                <img src=imagens/anuncie.png" width="330" height="500">
             </div>
         <article>
             <h1>Titulo sobre algo</h1>
