--- a/teste.html
+++ b/teste.html
@@ -15,7 +15,7 @@
             font-family:sans-serif;
         }
         body {
-            background-image: url(imagens/fundo2.png);
+            background-image: url(./imagens/fundo2.png);
             background-size: 100%;
             /*background-color: rgba(255, 255, 255, 0.336);*/
         }
