--- a/teste02.html
+++ b/teste02.html
@@ -234,7 +234,7 @@
                     <option value="05">05</option>
                 </select>
                 <select id="mes-nascimento" required>
-                    <option value="Janeiro">Janeiro</option>
+                    <option value="Janeiro">SUCESSO!</option>
                     <option value="Fevereiro">Fevereiro</option>
                     <option value="Março">Março</option>
                     <option value="Abril">Abril</option>
